--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,37 +4,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>test</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <parent>
         <groupId>ru.javaops</groupId>
-        <artifactId>war-parent</artifactId>
-        <relativePath>../war-parent/pom.xml</relativePath>
+        <artifactId>parent</artifactId>
+        <relativePath>../parent/pom.xml</relativePath>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>upload</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <name>Upload</name>
-
-
     <dependencies>
         <dependency>
-            <groupId>ru.javaops</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>one.util</groupId>
-            <artifactId>streamex</artifactId>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
             <version>RELEASE</version>
         </dependency>
-
         <dependency>
-            <groupId>com.j2html</groupId>
-            <artifactId>j2html</artifactId>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
             <version>RELEASE</version>
+            <scope>provided</scope>
         </dependency>
-
     </dependencies>
+
 </project>
